# panda-etl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: .coveragerc  .env.example  .gitignore  .sample.env  Makefile  README.md  alembic.ini  db_inspect.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0371afa4fbf0_generate_chat_models.py  1aea8dc0bfda_store_asset_content_update.py  1df766359982_soft_deleted_columns_added.py  1f99c0166797_rename_column_summary.py  2484b46ee17d_process_add_summary.py  284ed84c1933_add_process_step_status.py  34b7216ce425_add_processes.py  3d8d3aef6cfd_.py  52638004c665_store_asset_content.py  86611d367b4e_add_asset_size.py  883990c30c41_update_asset_type_and_add_metadata.py  9124a6ec701d_output_context_in_process_step.py  917de9c35f18_add_datetimes_to_all_tables.py  92f4fabcce75_merge_1df766359982_and_2484b46ee17d.py  a69d9e6daed3_initial_migration.py  b71273f287ed_initial_migration.py  ca718b243f47_add_name_to_the_process.py  ccfafd40eaf9_merge_284ed84c1933_and_fc88c981b40e.py  e1e475154dfc_add_process_step.py  e62b1d672015_add_api_key.py  fc88c981b40e_username_updated.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  logger.py  main.py  requests.py  utils.py
backend/app/api/v1/: chat.py  (+6 more)
backend/app/database/: __init__.py  query.py
backend/app/models/: __init__.py  api_key.py  asset.py  asset_content.py  base.py  conversation.py  conversation_message.py  process.py  process_step.py  project.py  user.py
backend/app/processing/: file_preprocessing.py  process_queue.py  process_scheduler.py
backend/app/repositories/: conversation_repository.py  process_repository.py  process_step_repository.py  project_repository.py  user_repository.py
backend/app/requests/: __init__.py  schemas.py
backend/app/routes/: __init__.py  projects.py
backend/app/schemas/: asset.py  process.py  project.py  user.py
backend/app/vectorstore/: __init__.py  chroma.py  vectorstore.py
backend/instance/: app.db
backend/migrations/versions/: 26964de2a94a_initial_migration.py  448e0ee1c9b5_create_user_model.py  888d2e54cd5f_create_project_model.py  bb6280fbb9c3_create_asset_model.py
backend/tests/: conftest.py
backend/tests/extract/: test_extract_fields.py  test_extract_pdf.py
backend/tests/processes/: test_process_steps_zip.py
backend/tests/processing/: test_file_preprocessing.py  test_process_queue.py  test_process_scheduler.py
backend/tests/projects/: test_add_assets.py  test_create_project.py  test_delete_asset.py  test_delete_project.py  test_get_assets.py  test_get_file.py  test_get_processes.py  test_get_project.py  test_get_projects.py  test_update_project.py
(+147 files in other folders)
