[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ArslanSaleem <khan.arslan38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.111.1"}
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
unstructured = {extras = ["pdf"], version = "^0.15.0"}
openai = "^1.35.14"
starlette = "^0.37.2"
spacy = "^3.7.5"
fitz = "^0.0.1.dev2"
scikit-learn = "^1.5.1"
pymupdf = "^1.24.8"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
