[tool.poetry]
name = "backend"
version = "0.1.0"
description = "No-code ETL and data pipelines with AI and NLP"
authors = ["Gabriele Venturi <gabriele@sinaptik.ai>", "ArslanSaleem <arslan@sinaptik.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.111.1"}
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
starlette = "^0.37.2"
dateparser = "^1.2.0"
requests = "^2.32.3"
chromadb = "^0.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
